GiRaFFE_NRPy-PPM: Edited code to enable the algorithm to work with the NRPy+ infrastructure.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-PPM.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-PPM.ipynb
@@ -104,7 +104,15 @@
     "  REAL *gf;\n",
     "  int gz_lo[4],gz_hi[4];\n",
     "};\n",
-    "```"
+    "```\n",
+    "\n",
+    "In NRPy+, we will have to interact with our arrays on a lower level than normal in order to get this pointer. NRPy+ stores gridfunctions all in one array, but values for a specific quantity (e.g., `ValenciavU0`) are still stored contiguously. That means that the pointer we are after is simply the one that points to the first point of that quantity, i.e. `i0=0`, `i1=0`, and `i2=0`. Recall the typical macro we use for memory access:\n",
+    "```c\n",
+    "#define IDX4S(g,i,j,k) \\\n",
+    "( (i) + Nxx_plus_2NGHOSTS0 * ( (j) + Nxx_plus_2NGHOSTS1 * ( (k) + Nxx_plus_2NGHOSTS2 * (g) ) ) )\n",
+    "\n",
+    "```\n",
+    "It thus follows that the pointer that needs to be stored in this structure is `Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2*g`, where `g` is, in this example, `VALENCIAVU0GF`. "
    ]
   },
   {
@@ -196,8 +204,12 @@
    "source": [
     "%%writefile -a $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.C\n",
     "\n",
-    "static void reconstruct_set_of_prims_PPM_GRFFE(const cGH *cctkGH,const int *cctk_lsh,const int flux_dirn,const int num_prims_to_reconstruct,const int *which_prims_to_reconstruct,\n",
-    "                                               const gf_and_gz_struct *in_prims,gf_and_gz_struct *out_prims_r,gf_and_gz_struct *out_prims_l, REAL *temporary) {\n",
+    "static void reconstruct_set_of_prims_PPM_GRFFE(const paramstruct *restrict params,REAL *restrict auxevol_gfs,const int flux_dirn,\n",
+    "                                               const int num_prims_to_reconstruct,const int *which_prims_to_reconstruct,\n",
+    "                                               const gf_and_gz_struct *in_prims,gf_and_gz_struct *out_prims_r,\n",
+    "                                               gf_and_gz_struct *out_prims_l,REAL *temporary) {\n",
+    "#include \"set_Cparameters.h\"\n",
+    "  const int Nxx_plus_2NGHOSTS[3] = {Nxx_plus_2NGHOSTS0,Nxx_plus_2NGHOSTS1,Nxx_plus_2NGHOSTS2};\n",
     "\n",
     "  REAL U[MAXNUMVARS][MAXNUMINDICES],dU[MAXNUMVARS][MAXNUMINDICES],slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],\n",
     "    Ur[MAXNUMVARS][MAXNUMINDICES],Ul[MAXNUMVARS][MAXNUMINDICES];\n",
@@ -225,7 +237,7 @@
     "\n",
     "In Loop 1, we will interpolate the face values at the left and right interfaces, `Ur` and `Ul`, respectively. This is done on a point-by-point basis as defined by the `LOOP_DEFINE`. \n",
     "\n",
-    "After reading in the relevant values from memory, we calculate thesimple `dU`:\n",
+    "After reading in the relevant values from memory, we calculate the simple `dU`:\n",
     "\\begin{align}\n",
     "dU_{-1} &= U_{-1} - U_{-2} \\\\\n",
     "dU_{+0} &= U_{+0} - U_{-1} \\\\\n",
@@ -265,7 +277,7 @@
     "    //     defined from MINUS2 to PLUS2, so we would lose those points anyway.\n",
     "    //     But in GRFFE, ftilde is set to zero, so there may be a potential\n",
     "    //     for boosting performance here.\n",
-    "    LOOP_DEFINE(2,2,  cctk_lsh,flux_dirn,  ijkgz_lo_hi,in_prims[whichvar].gz_lo,in_prims[whichvar].gz_hi) {\n",
+    "    LOOP_DEFINE(2,2,  Nxx_plus_2NGHOSTS,flux_dirn,  ijkgz_lo_hi,in_prims[whichvar].gz_lo,in_prims[whichvar].gz_hi) {\n",
     "      SET_INDEX_ARRAYS(-2,2,flux_dirn);\n",
     "      /* *** LOOP 1a: READ INPUT *** */\n",
     "      // Read in a primitive at all gridpoints between m = MINUS2 & PLUS2, where m's direction is given by flux_dirn. Store to U. \n",
@@ -339,7 +351,7 @@
     "  for(int ww=0;ww<num_prims_to_reconstruct;ww++) {\n",
     "    const int whichvar=which_prims_to_reconstruct[ww];\n",
     "    // ftilde() depends on P(MINUS2,MINUS1,PLUS1,PLUS2), THUS IS SET TO ZERO IN GRFFE\n",
-    "    LOOP_DEFINE(2,2,  cctk_lsh,flux_dirn,  ijkgz_lo_hi,in_prims[whichvar].gz_lo,in_prims[whichvar].gz_hi) {\n",
+    "    LOOP_DEFINE(2,2,  Nxx_plus_2NGHOSTS,flux_dirn,  ijkgz_lo_hi,in_prims[whichvar].gz_lo,in_prims[whichvar].gz_hi) {\n",
     "      SET_INDEX_ARRAYS(0,0,flux_dirn);\n",
     "      \n",
     "      U[whichvar][PLUS0]  = in_prims[whichvar].gf[index_arr[flux_dirn][PLUS0]];\n",
@@ -406,12 +418,12 @@
     "   *      track of indices when computing the flux. */\n",
     "  for(int ww=0;ww<num_prims_to_reconstruct;ww++) {\n",
     "    const int whichvar=which_prims_to_reconstruct[ww];\n",
-    "    LOOP_DEFINE(3,2,  cctk_lsh,flux_dirn,  ijkgz_lo_hi,in_prims[whichvar].gz_lo,in_prims[whichvar].gz_hi) {\n",
+    "    LOOP_DEFINE(3,2,  Nxx_plus_2NGHOSTS,flux_dirn,  ijkgz_lo_hi,in_prims[whichvar].gz_lo,in_prims[whichvar].gz_hi) {\n",
     "      SET_INDEX_ARRAYS(-1,0,flux_dirn);\n",
     "      temporary[index_arr[flux_dirn][PLUS0]] = out_prims_r[whichvar].gf[index_arr[flux_dirn][MINUS1]];\n",
     "    }\n",
     "\n",
-    "    LOOP_DEFINE(3,2,  cctk_lsh,flux_dirn,  ijkgz_lo_hi,in_prims[whichvar].gz_lo,in_prims[whichvar].gz_hi) {\n",
+    "    LOOP_DEFINE(3,2,  Nxx_plus_2NGHOSTS,flux_dirn,  ijkgz_lo_hi,in_prims[whichvar].gz_lo,in_prims[whichvar].gz_hi) {\n",
     "      SET_INDEX_ARRAYS(0,0,flux_dirn);\n",
     "      // Then shift so that Ur represents the gridpoint at i-1/2+epsilon, \n",
     "      //                and Ul represents the gridpoint at i-1/2-epsilon.\n",
@@ -497,7 +509,7 @@
    "source": [
     "<a id='monotonize_def'></a>\n",
     "\n",
-    "## Step 3: The monotonization algorithm \\[Back to [top](#toc)\\]\n",
+    "# Step 3: The monotonization algorithm \\[Back to [top](#toc)\\]\n",
     "$$\\label{monotonize_def}$$\n",
     "\n",
     "The next function monotonizes the slopes using the algorithm from [Colella and Woodward (1984)](https://crd.lbl.gov/assets/pubs_presos/AMCS/ANAG/A141984.pdf), eq. 1.10. We want the slope to be monotonic in a cell in order to reduce the impact of the Gibbs phenomenon. So, we consider three values in the cell: the cell average, `U`; on the left interface of the cell, `Ul`; and on the right interface of the cell, `Ur`. The goal of the algorithm is to ensure monotonicity; so, it first checks to see if the cell contains a local extremum. If it does, we make the interpolation function a constant.We must then also consider the case where `U` is \"close\" to `Ur` or `Ul`, and an interpolating polynomial between them would not be monotonic over the cell. So, the basic algorithm is as follows:\n",
@@ -555,9 +567,140 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='loops'></a>\n",
+    "\n",
+    "# Step 4: Dependencies \\[Back to [top](#toc)\\]\n",
+    "$$\\label{loops}$$\n",
+    "\n",
+    "This above functions include calls to several functions not given there. We will include those files below. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile $Ccodesdir/loop_defines_reconstruction.h\n",
+    "#ifndef LOOP_DEFINES_RECONSTRUCTION_H_\n",
+    "#define LOOP_DEFINES_RECONSTRUCTION_H_\n",
+    "\n",
+    "#define LOOP_DEFINE(gz_shift_lo,gz_shift_hi,  ext,flux_dirn,  ijkgz_lo_hi,gz_lo,gz_hi) \\\n",
+    "  for(int rr=1;rr<=3;rr++) {                                            \\\n",
+    "    ijkgz_lo_hi[rr][0]=          gz_lo[rr];                             \\\n",
+    "    ijkgz_lo_hi[rr][1]=ext[rr-1]-gz_hi[rr];                             \\\n",
+    "  }                                                                     \\\n",
+    "  ijkgz_lo_hi[flux_dirn][0] += gz_shift_lo;                             \\\n",
+    "  ijkgz_lo_hi[flux_dirn][1] -= gz_shift_hi;                             \\\n",
+    "  /* The following line is valid C99 */                                 \\\n",
+    "  _Pragma(\"omp parallel for private(U,dU,slope_lim_dU,Ur,Ul)\")          \\\n",
+    "  for(int k=ijkgz_lo_hi[3][0];k<ijkgz_lo_hi[3][1];k++)                  \\\n",
+    "    for(int j=ijkgz_lo_hi[2][0];j<ijkgz_lo_hi[2][1];j++)                \\\n",
+    "      for(int i=ijkgz_lo_hi[1][0];i<ijkgz_lo_hi[1][1];i++)\n",
+    "\n",
+    "// This define only sets indices. \n",
+    "// FIXME: benchmark with and without the if() statement.\n",
+    "// FIXME: try without index_arr being defined in all directions.\n",
+    "#define SET_INDEX_ARRAYS(IMIN,IMAX,flux_dirn)                           \\\n",
+    "  const int max_shift=(MAXNUMINDICES/2);                                \\\n",
+    "  /* DEBUGGING ONLY:  if(IMIN<-max_shift || IMAX>max_shift) CCTK_VError(VERR_DEF_PARAMS,\"FIX MAXNUMINDICES!\"); */ \\\n",
+    "  int index_arr[4][MAXNUMINDICES];                                      \\\n",
+    "  for(int idx=IMIN;idx<=IMAX;idx++) {                                   \\\n",
+    "    index_arr[flux_dirn][idx+max_shift]=                                \\\n",
+    "      IDX3S(                                                            \\\n",
+    "            i+idx*kronecker_delta[flux_dirn][0],                        \\\n",
+    "            j+idx*kronecker_delta[flux_dirn][1],                        \\\n",
+    "            k+idx*kronecker_delta[flux_dirn][2]);                       \\\n",
+    "  }\n",
+    "\n",
+    "#define SET_INDEX_ARRAYS_3DBLOCK(IJKLOHI)                               \\\n",
+    "  const int max_shift=(MAXNUMINDICES/2);                                \\\n",
+    "  int index_arr_3DB[MAXNUMINDICES][MAXNUMINDICES][MAXNUMINDICES];       \\\n",
+    "  for(int idx_k=IJKLOHI[4];idx_k<=IJKLOHI[5];idx_k++) for(int idx_j=IJKLOHI[2];idx_j<=IJKLOHI[3];idx_j++) for(int idx_i=IJKLOHI[0];idx_i<=IJKLOHI[1];idx_i++) { \\\n",
+    "        index_arr_3DB[idx_k+max_shift][idx_j+max_shift][idx_i+max_shift]=CCTK_GFINDEX3D(cctkGH,i+idx_i,j+idx_j,k+idx_k); \\\n",
+    "      }\n",
+    "\n",
+    "#endif /* LOOP_DEFINES_RECONSTRUCTION_H_ */\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='example'></a>\n",
+    "\n",
+    "# Step 5: Example code in order to use this algorithm \\[Back to [top](#toc)\\]\n",
+    "$$\\label{example}$$\n",
+    "\n",
+    "Recall that the gridfunction and ghostzone structures require a pointer `gf`\n",
+    "```c\n",
+    "// Keeping track of ghostzones between routines is a nightmare, so\n",
+    "//   we instead attach ghostzone info to each gridfunction and set\n",
+    "//   the ghostzone information correctly within each routine.\n",
+    "struct gf_and_gz_struct {\n",
+    "  REAL *gf;\n",
+    "  int gz_lo[4],gz_hi[4];\n",
+    "};\n",
+    "```\n",
+    "that can be found in NRPy+ as \n",
+    "```c\n",
+    "#define IDX4S(g,i,j,k) \\\n",
+    "( (i) + Nxx_plus_2NGHOSTS0 * ( (j) + Nxx_plus_2NGHOSTS1 * ( (k) + Nxx_plus_2NGHOSTS2 * (g) ) ) )\n",
+    "\n",
+    "```\n",
+    "So, the prerequisites that go into calling the PPM function will be as follows.\n",
+    "\n",
+    "\n",
+    "```c\n",
+    "  const int VX=0,VY=1,VZ=2,BX=3,BY=4,BZ=5;\n",
+    "  const int NUM_RECONSTRUCT_GFS = 6;\n",
+    "  const int Nxxp2NG012 = Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2;\n",
+    "  \n",
+    "  gf_and_gz_struct in_prims[NUM_RECONSTRUCT_GFS], out_prims_r[NUM_RECONSTRUCT_GFS], out_prims_l[NUM_RECONSTRUCT_GFS];\n",
+    "  int which_prims_to_reconstruct[NUM_RECONSTRUCT_GFS],num_prims_to_reconstruct;\n",
+    "\n",
+    "  int ww=0;\n",
+    "  in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*VALENCIAVU0GF; \n",
+    "    out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_RU0GF; \n",
+    "    out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_LU0GF; \n",
+    "    ww++;\n",
+    "  in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*VALENCIAVU1GF; \n",
+    "    out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_RU1GF; \n",
+    "    out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_LU1GF; \n",
+    "    ww++;\n",
+    "  in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*VALENCIAVU2GF; \n",
+    "    out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_RU2GF; \n",
+    "    out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*VALENCIAV_LU2GF; \n",
+    "    ww++;\n",
+    "  in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*BU0GF; \n",
+    "    out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*B_RU0GF; \n",
+    "    out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*B_LU0GF; \n",
+    "    ww++;\n",
+    "  in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*BU1GF; \n",
+    "    out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*B_RU1GF; \n",
+    "    out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*B_LU1GF; \n",
+    "    ww++;\n",
+    "  in_prims[ww].gf      = auxevol_gfs + Nxxp2NG012*BU2GF; \n",
+    "    out_prims_r[ww].gf = auxevol_gfs + Nxxp2NG012*B_RU2GF; \n",
+    "    out_prims_l[ww].gf = auxevol_gfs + Nxxp2NG012*B_LU2GF; \n",
+    "    ww++;\n",
+    "\n",
+    "  // Prims are defined AT ALL GRIDPOINTS, so we set the # of ghostzones to zero:\n",
+    "  for(int i=0;i<NUM_RECONSTRUCT_GFS;i++) for(int j=1;j<=3;j++) { in_prims[i].gz_lo[j]=0; in_prims[i].gz_hi[j]=0; }\n",
+    "  // Left/right variables are not yet defined, yet we set the # of gz's to zero by default:\n",
+    "  for(int i=0;i<NUM_RECONSTRUCT_GFS;i++) for(int j=1;j<=3;j++) { out_prims_r[i].gz_lo[j]=0; out_prims_r[i].gz_hi[j]=0; }\n",
+    "  for(int i=0;i<NUM_RECONSTRUCT_GFS;i++) for(int j=1;j<=3;j++) { out_prims_l[i].gz_lo[j]=0; out_prims_l[i].gz_hi[j]=0; }\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 4: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 6: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
