SEOBNR: Add text diff validation to Hamiltonian notebook, including trusted file.

--- a/in_progress/Tutorial-SEOBNR_Documentation.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Documentation.ipynb
@@ -4346,9 +4346,20 @@
    "cell_type": "code",
    "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing difference between notebook output and a trusted list of expressions...\n",
+      "Checking file Hamiltonian_expressions.txt-VALIDATION\n",
+      "No difference. TEST PASSED!\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
+    "import difflib, sys, os\n",
     "\n",
     "# The subterms in the Hamiltonian expression are sometimes written on more than\n",
     "# one line for readability in this Jupyter notebook.  We first create a file of\n",
@@ -4378,6 +4389,7 @@
     "        count = count + 1\n",
     "\n",
     "# Now reverse the expressions and write them in a function\n",
+    "# This formulation is used to check that we get a reasonable H_real value\n",
     "with open('SEOBNR/Hreal_on_bottom.py', 'w') as output:\n",
     "    output.write(\"import numpy as np\\ndef compute_Hreal(m1=23., m2=10., EMgamma=0.577215664901532860606512090082402431, tortoise=1, dSO=-7.966696593617955e+01, dSS=1.261873764525631e+01, x=2.129681018601393e+01, y=0.000000000000000e+00, z=0.000000000000000e+00, p1=0.000000000000000e+00, p2=2.335391115580442e-01, p3=-4.235164736271502e-22, S1x=4.857667584940312e-03, S1y=9.715161660389764e-03, S1z=-1.457311842632286e-02, S2x=3.673094582185491e-03, S2y=-4.591302628615413e-03, S2z=5.509696538546906e-03):\\n\")\n",
     "    for line in reversed(list(open(\"SEOBNR/Hamiltonian-Hreal_one_line_expressions.txt\"))):\n",
@@ -4387,7 +4399,39 @@
     "                                \"np.pi\"))\n",
     "    output.write(\"\\treturn Hreal\")\n",
     "\n",
+    "# Now reverse the expressions in a standalone text file\n",
+    "# This formulation is used as a harsher validation check that all expressions agree with a trusted list\n",
+    "with open('SEOBNR/Hamiltonian_expressions.txt-VALIDATION', 'w') as output:\n",
+    "    for line in reversed(list(open(\"SEOBNR/Hamiltonian-Hreal_one_line_expressions.txt\"))):\n",
+    "        output.write(\"\\t%s\\n\" % line.rstrip().replace(\"sp.sqrt\", \"np.sqrt\").replace(\"sp.Rational\",\n",
+    "                                \"np.divide\").replace(\"sp.abs\", \"np.abs\").replace(\"sp.log\",\n",
+    "                                \"np.log\").replace(\"sp.sign\", \"np.sign\").replace(\"sp.pi\",\n",
+    "                                \"np.pi\"))\n",
+    "\n",
+    "print(\"Printing difference between notebook output and a trusted list of expressions...\")\n",
+    "# Open the files to compare\n",
+    "# TYLERK: ask if we want a separate directory for validation\n",
+    "valdir = \"SEOBNR/\"\n",
+    "outdir = \"SEOBNR/\"\n",
+    "file = \"Hamiltonian_expressions.txt\"\n",
+    "outfile = \"Hamiltonian_expressions.txt-VALIDATION\"\n",
+    "\n",
+    "print(\"Checking file \" + outfile)\n",
+    "with open(os.path.join(valdir+file)) as file1, open(os.path.join(outdir+outfile)) as file2:\n",
+    "    # Read the lines of each file\n",
+    "    file1_lines = file1.readlines()\n",
+    "    file2_lines = file2.readlines()\n",
+    "    num_diffs = 0\n",
+    "    for line in difflib.unified_diff(file1_lines, file2_lines, fromfile=os.path.join(valdir+file), tofile=os.path.join(outdir+outfile)):\n",
+    "        sys.stdout.writelines(line)\n",
+    "        num_diffs = num_diffs + 1\n",
+    "    if num_diffs == 0:\n",
+    "        print(\"No difference. TEST PASSED!\")\n",
+    "    else:\n",
+    "        print(\"ERROR: Disagreement found with the trusted file. See differences above.\")\n",
+    "\n",
     "# Import the new Hamiltonian function and the trusted Hamiltonian function\n",
+    "# TYLERK: maybe remove this later?\n",
     "import SEOBNR.Hreal_trusted_computation as Hreal_trusted\n",
     "import SEOBNR.Hreal_on_bottom as Hreal_new\n",
     "\n",
