SEOBNR: being writing second derivative routine expressions.

--- a/in_progress/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -146,7 +146,7 @@
     "  * [Step 3.l:](#rotatep) Rotate ${\\bf p}$\n",
     "1. [Step 4:](#step4) Compute $\\dot{\\bf r}$\n",
     "  * [Step 4.a:](#carttosph) Convert from Cartesian to Spherical Coordinates\n",
-    "  * [Step 4.b:](#secondderiv) Second derivatives of $H_{\\rm real}$\n",
+    "  * [Step 4.b:](#secondderiv) Second partial derivatives of $H_{\\rm real}$\n",
     "  * [Stop 4.c:](#dedr) $\\frac{ \\partial E }{ \\partial r }$\n",
     "  * [Step 4.e:](#sigmastar) $\\boldsymbol{\\sigma}^{*}$\n",
     "  * [Step 4.f:](#hreal) $H_{\\rm real}$\n",
@@ -1016,12 +1016,49 @@
    "source": [
     "<a id='secondderiv'></a>\n",
     "\n",
-    "## Step 4.b: Second derivatives of $H_{\\rm real}$ \\[Back to [top](#toc)\\]\n",
+    "## Step 4.b: Second partial derivatives of $H_{\\rm real}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{seconderiv}$$\n",
     "\n",
-    "We need to compute $\\frac{ \\partial H }{ \\partial {\\bf p}^{\\phi} }$, $\\frac{ \\partial^{2} H_{\\rm real} }{ \\partial r^{2} }$, and $\\frac{ \\partial^{2} H_{\\rm real} }{ \\partial r \\partial {\\bf p}^{\\phi} }$ (<font color='red'>in another module</font>).\n",
+    "In order to include effects of radiation reaction, we need to compute [BCD2006](https://arxiv.org/abs/gr-qc/0508067) Equation (4.14).  This requires that we compute $\\frac{ \\partial H }{ \\partial {\\bf p}^{\\phi} }$, $\\frac{ \\partial^{2} H_{\\rm real} }{ \\partial r^{2} }$, and $\\frac{ \\partial^{2} H_{\\rm real} }{ \\partial r \\partial {\\bf p}^{\\phi} }$.\n",
+    "\n",
+    "Recall that we are in the special case ${\\bf r}^{\\theta} = \\frac{\\pi}{2}$, ${\\bf r}^{\\phi} = 0$, so that conversion from Cartesian to spherical coordinates is given by the relations in [Step 4.a](#carttosph).  Then\n",
+    "\\begin{align*}\n",
+    "    \\partial {\\bf r}^{r} &= \\partial {\\bf r}^{0} \\\\\n",
+    "    \\partial {\\bf p}^{r} &= \\partial {\\bf p}^{0} \\\\\n",
+    "    \\frac{ \\partial {\\bf p}^{z} }{ \\partial {\\bf r}^{r} } &= \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\\\\n",
+    "    \\frac{ \\partial {\\bf p}^{z} }{ \\partial {\\bf p}^{\\theta} } &= -\\frac{ 1 }{ {\\bf r}^{r} } \\\\\n",
+    "        \\frac{ \\partial {\\bf p}^{y} }{ \\partial {\\bf r}^{r} } &= -\\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\\\\n",
+    "    \\frac{ \\partial {\\bf p}^{y} }{ \\partial {\\bf p}^{\\phi} } &= \\frac{ 1 }{ {\\bf r}^{r} }.\n",
+    "\\end{align*}\n",
+    "\n",
+    "It follows that\n",
+    "\\begin{align*}\n",
+    "    \\frac{ \\partial H }{ \\partial {\\bf r}^{r} } &= \\frac{ \\partial H }{ \\partial {\\bf r}^{x} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } = \\frac{ \\partial H }{ \\partial {\\bf r}^{0} } - \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\\\\n",
+    "    \\frac{ \\partial H }{ \\partial {\\bf p}^{\\theta} } &= \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf p}^{\\theta} } = -\\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\frac{ 1 }{ {\\bf r}^{r} } \\\\\n",
+    "    \\frac{ \\partial H }{ \\partial {\\bf p}^{\\phi} } &= \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf p}^{\\phi} } = \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ 1 }{ {\\bf r}^{r} },\n",
+    "\\end{align*}\n",
+    "\n",
+    "which gives\n",
+    "\\begin{align*}\n",
+    "    \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf r}^{r} \\right)^{2} } &= \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf r}^{r} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } - \\left[ \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf r}^{r} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\partial_{{\\bf r}^{r}} \\left( \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\right] + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf r}^{r} } \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\partial_{{\\bf r}^{r}} \\left( \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\\\\n",
+    "        &= \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf r}^{0} \\right)^{2} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{1} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{2} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } - \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf r}^{0} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf p}^{1} \\right)^{2} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf p}^{2} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } \\right) \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\left( - \\frac{ 2 {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right) \\right] \\\\\n",
+    "            &\\ \\ \\ \\ \\ + \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf r}^{0} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf p}^{1} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf p}^{2} \\right)^{2} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } \\right) \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\left( - \\frac{ 2 {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right) \\right] \\\\\n",
+    "        &= \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf r}^{0} \\right)^{2} } - \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{1} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( \\partial {\\bf r}^{r} \\right)^{2} } - \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf r}^{0} } - \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf p}^{1} \\right)^{2} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf p}^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } - \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ 2 {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right] \\\\\n",
+    "            &\\ \\ \\ \\ \\ + \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf r}^{0} } - \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf p}^{1} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf p}^{2} \\right)^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } - \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\frac{ 2 {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right], \\\\\n",
+    "    \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{r} \\partial {\\bf p}^{\\theta} } &= \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{\\phi} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial H }{ \\partial {\\bf r}^{0} } \\frac{ \\partial^{2} {\\bf r}^{0} }{ \\partial {\\bf r}^{r} \\partial {\\bf p}^{\\phi} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf p}^{\\phi} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ \\partial^{2} {\\bf p}^{1} }{ \\partial {\\bf r}^{r} \\partial {\\bf p}^{\\phi} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf p}^{\\phi} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\frac{ \\partial^{2} {\\bf p}^{2} }{ \\partial {\\bf r}^{r} \\partial {\\bf p}^{\\phi}}\n",
+    "\\end{align*}\n",
     "\n",
     "<font color='red'>Note: be sure that, following this, we use normalized spins.</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align*}\n",
+    "    & \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf r}^{0} \\right)^{2} } - \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{1} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( \\partial {\\bf r}^{r} \\right)^{2} } - \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf r}^{0} } - \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf p}^{1} \\right)^{2} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf p}^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } - \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ 2 {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right] \\\\\n",
+    "            &\\ \\ \\ \\ \\ + \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf r}^{0} } - \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf p}^{1} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf p}^{2} \\right)^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } - \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\frac{ 2 {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right]\n",
+    "\\end{align*}"
    ]
   },
   {
