--- a/in_progress/Tutorial-GiRaFFE_NRPy-PPM.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-PPM.ipynb
@@ -143,12 +143,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.C\n"
+      "Overwriting GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.C\n",
+    "%%writefile $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.c\n",
     "/*****************************************\n",
     " * PPM Reconstruction Interface.\n",
     " * Zachariah B. Etienne (2013)\n",
@@ -166,11 +166,20 @@
     "#define MAXNUMINDICES 5\n",
     "//    ^^^^^^^^^^^^^ Be _sure_ to define MAXNUMINDICES appropriately!\n",
     "\n",
+    "#define MIN(a,b) ( ((a) < (b)) ? (a) : (b) )\n",
+    "#define MAX(a,b) ( ((a) > (b)) ? (a) : (b) )\n",
+    "#define SQR(x) ((x) * (x))\n",
+    "// FIXME: Should make this zero-offset for NRPy+ standards. Probably a wrapper function for compatibility with a minimum of other changes?\n",
+    "const int kronecker_delta[4][3] = { { 0,0,0 },\n",
+    "                                    { 1,0,0 },\n",
+    "                                    { 0,1,0 },\n",
+    "                                    { 0,0,1 } };\n",
+    "\n",
     "// You'll find the #define's for LOOP_DEFINE and SET_INDEX_ARRAYS inside:\n",
     "#include \"loop_defines_reconstruction.h\"\n",
     "\n",
     "static inline REAL slope_limit(const REAL dU,const REAL dUp1);\n",
-    "static inline void monotonize(const REAL U,REAL &Ur,REAL &Ul);\n",
+    "static inline void monotonize(const REAL U,REAL Ur,REAL Ul);\n",
     "\n"
    ]
   },
@@ -197,12 +206,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.C\n"
+      "Appending to GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.C\n",
+    "%%writefile -a $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.c\n",
     "\n",
     "static void reconstruct_set_of_prims_PPM_GRFFE(const paramstruct *restrict params,REAL *restrict auxevol_gfs,const int flux_dirn,\n",
     "                                               const int num_prims_to_reconstruct,const int *which_prims_to_reconstruct,\n",
@@ -211,17 +220,18 @@
     "#include \"set_Cparameters.h\"\n",
     "  const int Nxx_plus_2NGHOSTS[3] = {Nxx_plus_2NGHOSTS0,Nxx_plus_2NGHOSTS1,Nxx_plus_2NGHOSTS2};\n",
     "\n",
-    "  REAL U[MAXNUMVARS][MAXNUMINDICES],dU[MAXNUMVARS][MAXNUMINDICES],slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],\n",
-    "    Ur[MAXNUMVARS][MAXNUMINDICES],Ul[MAXNUMVARS][MAXNUMINDICES];\n",
+    "  REAL U[NUM_RECONSTRUCT_GFS][MAXNUMINDICES],dU[NUM_RECONSTRUCT_GFS][MAXNUMINDICES],slope_lim_dU[NUM_RECONSTRUCT_GFS][MAXNUMINDICES],\n",
+    "    Ur[NUM_RECONSTRUCT_GFS][MAXNUMINDICES],Ul[NUM_RECONSTRUCT_GFS][MAXNUMINDICES];\n",
     "  int ijkgz_lo_hi[4][2];\n",
     "\n",
     "  for(int ww=0;ww<num_prims_to_reconstruct;ww++) {\n",
     "    const int whichvar=which_prims_to_reconstruct[ww];\n",
     "\n",
     "    if(in_prims[whichvar].gz_lo[flux_dirn]!=0 || in_prims[whichvar].gz_hi[flux_dirn]!=0) {\n",
-    "      CCTK_VError(VERR_DEF_PARAMS,\"TOO MANY GZ'S! WHICHVAR=%d: %d %d %d : %d %d %d DIRECTION %d\",whichvar,\n",
+    "      printf(\"TOO MANY GZ'S! WHICHVAR=%d: %d %d %d : %d %d %d DIRECTION %d\",whichvar,\n",
     "\t\t  in_prims[whichvar].gz_lo[1],in_prims[whichvar].gz_lo[2],in_prims[whichvar].gz_lo[3],\n",
     "\t\t  in_prims[whichvar].gz_hi[1],in_prims[whichvar].gz_hi[2],in_prims[whichvar].gz_hi[3],flux_dirn);\n",
+    "      exit(0);  \n",
     "    }\n",
     "    "
    ]
@@ -261,12 +271,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.C\n"
+      "Appending to GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.C\n",
+    "%%writefile -a $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.c\n",
     "\n",
     "    // *** LOOP 1: Interpolate to Ur and Ul, which are face values ***\n",
     "    //  You will find that Ur depends on U at MINUS1,PLUS0, PLUS1,PLUS2, and\n",
@@ -337,12 +347,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.C\n"
+      "Appending to GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.C\n",
+    "%%writefile -a $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.c\n",
     "\n",
     "    // *** LOOP 2 (REMOVED): STEEPEN RHOB. RHOB DOES NOT EXIST IN GRFFE EQUATIONS ***\n",
     "  }\n",
@@ -365,7 +375,7 @@
     "      Ul[whichvar][PLUS0]   = Ul[whichvar][PLUS0];\n",
     "\n",
     "      // Then monotonize\n",
-    "      monotonize(U[whichvar][PLUS0],Ur[whichvar][PLUS0],Ul[whichvar][PLUS0]);\n",
+    "      monotonize(U[whichvar][PLUS0],&Ur[whichvar][PLUS0],&Ul[whichvar][PLUS0]);\n",
     "\n",
     "      out_prims_r[whichvar].gf[index_arr[flux_dirn][PLUS0]] = Ur[whichvar][PLUS0];\n",
     "      out_prims_l[whichvar].gf[index_arr[flux_dirn][PLUS0]] = Ul[whichvar][PLUS0];\n",
@@ -388,7 +398,7 @@
     "### Step 1.e: Shift indices \\[Back to [top](#toc)\\]\n",
     "$$\\label{shift}$$\n",
     "\n",
-    "In Loop 4, we will shift the indices of `Ur` and `Ul`. So far, we have been concerned with the behavior of the data within a single cell. In that context, it makes sense to call the value of data at the left end of the cell `Ul` and the data at the right end of the cell `Ur`. However, going forward, we will be concerned about the behavior of the data at the interface between cells. In this context, it sense to call the value of data on the left of the interface (which is at the right end of the cell!) `Ul` and the data on the right of the interface `Ur`. So, using the array `temporary`, we switch the two names."
+    "In Loop 4, we will shift the indices of `Ur` and `Ul`. So far, we have been concerned with the behavior of the data within a single cell. In that context, it makes sense to call the value of data at the left end of the cell `Ul` and the data at the right end of the cell `Ur`. However, going forward, we will be concerned about the behavior of the data at the interface between cells. In this context, it sense to call the value of data on the left of the interface (which is at the right end of the cell!) `Ul` and the data on the right of the interface `Ur`. So, using the array `temporary`, we switch the two names while shifting `Ur` appropriately."
    ]
   },
   {
@@ -400,12 +410,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.C\n"
+      "Appending to GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.C\n",
+    "%%writefile -a $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.c\n",
     "\n",
     "// *** LOOP 4: SHIFT Ur AND Ul ***\n",
     "  /* Currently face values are set so that\n",
@@ -473,12 +483,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.C\n"
+      "Appending to GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.C\n",
+    "%%writefile -a $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.c\n",
     "\n",
     "// Set SLOPE_LIMITER_COEFF = 2.0 for MC, 1 for minmod\n",
     "#define SLOPE_LIMITER_COEFF 2.0\n",
@@ -536,14 +546,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.C\n"
+      "Appending to GiRaFFE_standalone_Ccodes/PPM/reconstruct_set_of_prims_PPM_GRFFE.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile -a $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.C\n",
+    "%%writefile -a $Ccodesdir/reconstruct_set_of_prims_PPM_GRFFE.c\n",
     "\n",
-    "static inline void monotonize(const REAL U,REAL &Ur,REAL &Ul) {\n",
+    "static inline void monotonize(const REAL U,REAL Ur,REAL Ul) {\n",
     "  const REAL dU = Ur - Ul;\n",
     "  const REAL mU = 0.5*(Ur+Ul);\n",
     "  \n",
@@ -577,9 +587,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting GiRaFFE_standalone_Ccodes/PPM/loop_defines_reconstruction.h\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $Ccodesdir/loop_defines_reconstruction.h\n",
     "#ifndef LOOP_DEFINES_RECONSTRUCTION_H_\n",
@@ -638,8 +656,8 @@
     "//   we instead attach ghostzone info to each gridfunction and set\n",
     "//   the ghostzone information correctly within each routine.\n",
     "struct gf_and_gz_struct {\n",
-    "  REAL *gf;\n",
-    "  int gz_lo[4],gz_hi[4];\n",
+    "REAL *gf;\n",
+    "int gz_lo[4],gz_hi[4];\n",
     "};\n",
     "```\n",
     "that can be found in NRPy+ as \n",
@@ -652,10 +670,6 @@
     "\n",
     "\n",
     "```c\n",
-    "  const int VX=0,VY=1,VZ=2,BX=3,BY=4,BZ=5;\n",
-    "  const int NUM_RECONSTRUCT_GFS = 6;\n",
-    "  const int Nxxp2NG012 = Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2;\n",
-    "  \n",
     "  gf_and_gz_struct in_prims[NUM_RECONSTRUCT_GFS], out_prims_r[NUM_RECONSTRUCT_GFS], out_prims_l[NUM_RECONSTRUCT_GFS];\n",
     "  int which_prims_to_reconstruct[NUM_RECONSTRUCT_GFS],num_prims_to_reconstruct;\n",
     "\n",
@@ -691,7 +705,30 @@
     "  for(int i=0;i<NUM_RECONSTRUCT_GFS;i++) for(int j=1;j<=3;j++) { out_prims_r[i].gz_lo[j]=0; out_prims_r[i].gz_hi[j]=0; }\n",
     "  for(int i=0;i<NUM_RECONSTRUCT_GFS;i++) for(int j=1;j<=3;j++) { out_prims_l[i].gz_lo[j]=0; out_prims_l[i].gz_hi[j]=0; }\n",
     "\n",
-    "```\n"
+    "  ww=0;\n",
+    "  which_prims_to_reconstruct[ww]=VALENCIAVU0; ww++;\n",
+    "  which_prims_to_reconstruct[ww]=VALENCIAVU1; ww++;\n",
+    "  which_prims_to_reconstruct[ww]=VALENCIAVU2; ww++;\n",
+    "  which_prims_to_reconstruct[ww]=BU0;         ww++;\n",
+    "  which_prims_to_reconstruct[ww]=BU1;         ww++;\n",
+    "  which_prims_to_reconstruct[ww]=BU2;         ww++;\n",
+    "  num_prims_to_reconstruct=ww;\n",
+    "  // This function is housed in the file: \"reconstruct_set_of_prims_PPM_GRFFE.c\"\n",
+    "  reconstruct_set_of_prims_PPM_GRFFE(params, auxevol_gfs, flux_dirn, num_prims_to_reconstruct,                                                          which_prims_to_reconstruct, in_prims, out_prims_r, out_prims_l, temporary);\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Declaring `temporary` should looks something like this, but I haven't found where it's actually done in the old code:\n",
+    "```c\n",
+    "REAL temporary[Nxxp2NG012];\n",
+    "```\n",
+    "\n",
+    "This supposes that the following constants have been set:\n",
+    "```c\n",
+    "const int VX=0,VY=1,VZ=2,BX=3,BY=4,BZ=5;\n",
+    "const int NUM_RECONSTRUCT_GFS = 6;\n",
+    "const int Nxxp2NG012 = Nxx_plus_2NGHOSTS0*Nxx_plus_2NGHOSTS1*Nxx_plus_2NGHOSTS2;\n",
+    "```"
    ]
   },
   {
@@ -709,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
