--- a/in_progress/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/in_progress/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -1041,35 +1041,58 @@
     "which gives\n",
     "\\begin{align*}\n",
     "    \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf r}^{r} \\right)^{2} } &= \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf r}^{r} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } - \\left[ \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf r}^{r} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\partial_{{\\bf r}^{r}} \\left( \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\right] + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf r}^{r} } \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\partial_{{\\bf r}^{r}} \\left( \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\\\\n",
-    "        &= \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf r}^{0} \\right)^{2} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{1} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{2} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } - \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf r}^{0} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf p}^{1} \\right)^{2} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf p}^{2} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } \\right) \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\left( - \\frac{ 2 {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right) \\right] \\\\\n",
-    "            &\\ \\ \\ \\ \\ + \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf r}^{0} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf p}^{1} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf p}^{2} \\right)^{2} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } \\right) \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\left( - \\frac{ 2 {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right) \\right] \\\\\n",
-    "        &= \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf r}^{0} \\right)^{2} } - \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{1} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( \\partial {\\bf r}^{r} \\right)^{2} } - \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf r}^{0} } - \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf p}^{1} \\right)^{2} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf p}^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } - \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ 2 {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right] \\\\\n",
-    "            &\\ \\ \\ \\ \\ + \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf r}^{0} } - \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf p}^{1} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf p}^{2} \\right)^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } - \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\frac{ 2 {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right], \\\\\n",
-    "    \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{r} \\partial {\\bf p}^{\\theta} } &= \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{\\phi} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial H }{ \\partial {\\bf r}^{0} } \\frac{ \\partial^{2} {\\bf r}^{0} }{ \\partial {\\bf r}^{r} \\partial {\\bf p}^{\\phi} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf p}^{\\phi} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ \\partial^{2} {\\bf p}^{1} }{ \\partial {\\bf r}^{r} \\partial {\\bf p}^{\\phi} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf p}^{\\phi} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\frac{ \\partial^{2} {\\bf p}^{2} }{ \\partial {\\bf r}^{r} \\partial {\\bf p}^{\\phi}}\n",
+    "        &= \\frac{ \\partial^{2} H }{ \\partial \\left( {\\bf r}^{0} \\right)^{2} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{1} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{2} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } - \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf r}^{0} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial \\left( {\\bf p}^{1} \\right)^{2} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf p}^{2} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } \\right) \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\left( - \\frac{ 2 {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right) \\right] \\\\\n",
+    "            &\\ \\ \\ \\ \\ + \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf r}^{0} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf p}^{1} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial \\left( {\\bf p}^{2} \\right)^{2} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } \\right) \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\left( - \\frac{ 2 {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right) \\right] \\\\\n",
+    "        &= \\frac{ \\partial^{2} H }{ \\partial \\left( {\\bf r}^{0} \\right)^{2} } - \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{1} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\partial \\left( {\\bf r}^{r} \\right)^{2} } - \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf r}^{0} } - \\frac{ \\partial^{2} H }{ \\partial \\left( {\\bf p}^{1} \\right)^{2} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf p}^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } - \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ 2 {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right] \\\\\n",
+    "            &\\ \\ \\ \\ \\ + \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf r}^{0} } - \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf p}^{1} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\partial \\left( {\\bf p}^{2} \\right)^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } - \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\frac{ 2 {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right], \\\\\n",
+    "    \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{r} \\partial {\\bf p}^{\\theta} } &= \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{\\phi} } \\frac{ \\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial H }{ \\partial {\\bf r}^{0} } \\frac{ \\partial^{2} {\\bf r}^{0} }{ \\partial {\\bf r}^{r} \\partial {\\bf p}^{\\phi} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf p}^{\\phi} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ \\partial^{2} {\\bf p}^{1} }{ \\partial {\\bf r}^{r} \\partial {\\bf p}^{\\phi} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf p}^{\\phi} } \\frac{ \\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\frac{ \\partial^{2} {\\bf p}^{2} }{ \\partial {\\bf r}^{r} \\partial {\\bf p}^{\\phi}} \\\\\n",
+    "        &= \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{1} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf p}^{\\phi} } \\frac{\\partial {\\bf r}^{0} }{ \\partial {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial \\left( {\\bf p}^{1} \\right)^{2} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf p}^{\\phi} } \\frac{\\partial {\\bf p}^{1} }{ \\partial {\\bf r}^{r} } - \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ 1 }{ \\left( {\\bf r}^{r} \\right)^{2} } \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf p}^{1} } \\frac{ \\partial {\\bf p}^{1} }{ \\partial {\\bf p}^{\\phi} } \\frac{\\partial {\\bf p}^{2} }{ \\partial {\\bf r}^{r} } \\\\\n",
+    "        &= \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{1} } \\frac{ 1 }{ {\\bf r} } - \\frac{ \\partial^{2} H }{ \\partial \\left( {\\bf p}^{1} \\right)^{2} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{3} } - \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ 1 }{ {\\bf r}^{r} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{3} \\partial {\\bf p}^{1} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{3} }.\n",
     "\\end{align*}\n",
     "\n",
     "<font color='red'>Note: be sure that, following this, we use normalized spins.</font>"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\\begin{align*}\n",
-    "    & \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf r}^{0} \\right)^{2} } - \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{1} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf r}^{0} \\partial {\\bf p}^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( \\partial {\\bf r}^{r} \\right)^{2} } - \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf r}^{0} } - \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf p}^{1} \\right)^{2} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{1} \\partial {\\bf p}^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } - \\frac{ \\partial H }{ \\partial {\\bf p}^{1} } \\frac{ 2 {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right] \\\\\n",
-    "            &\\ \\ \\ \\ \\ + \\left[ \\left( \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf r}^{0} } - \\frac{ \\partial^{2} H }{ \\partial {\\bf p}^{2} \\partial {\\bf p}^{1} } \\frac{ {\\bf p}^{\\phi} }{ \\left( {\\bf r}^{r} \\right)^{2} } + \\frac{ \\partial^{2} H }{ \\left( \\partial {\\bf p}^{2} \\right)^{2} } \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } \\right) \\frac{ {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{2} } - \\frac{ \\partial H }{ \\partial {\\bf p}^{2} } \\frac{ 2 {\\bf p}^{\\theta} }{ \\left( {\\bf r}^{r} \\right)^{3} } \\right]\n",
-    "\\end{align*}"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  5.29  10.58 -15.87]\n",
+      "[0.01071014]\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Import second derivatives of H from another function/routine\n",
+    "if not os.path.isfile(\"SEOBNR_Playground_Pycodes/d2Hdx2.py\"):\n",
+    "    import SEOBNR.Hamiltonian_second_derivs_playground as Hsd\n",
+    "    Hsd.output_H_sec_derivs()\n",
+    "from SEOBNR_Playground_Pycodes.d2Hdx2 import compute_d2Hdx2 # For testing\n",
     "\n",
-    "#dHdpphi = dHdpx/r[0] - omega\n",
+    "print(S1)\n",
+    "\n",
+    "dH2dx2 = compute_d2Hdx2(m1, m2, eta, 2.129681018601393e+01, 0.0, 0.0,\n",
+    "                        0.0, 2.335391115580442e-01, -4.235164736271502e-22,\n",
+    "                        S1[0], S1[1], S1[2],\n",
+    "                        S2[0], S2[1], S2[2], KK, k0, k1, dSO, dSS, 2, EMgamma)\n",
+    "\n",
+    "print(dH2dx2)\n",
+    "sys.exit(1) # Might as well exit here for now.\n",
+    "\n",
     "#TylerK: Hard-code temporarily so that we can get to validation\n",
     "dHdpphi = 0.1\n",
     "d2Hdr2 = 0.2\n",
@@ -1094,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,23 +1165,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'SEOBNR_Playground_Pycodes.Hreal_on_bottom'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-d88cd6ff49d7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mSEOBNR_Playground_Pycodes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHreal_on_bottom\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mHam\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#All inputs agree with LALSuite\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#eta, KK, tortoise, and dSO all agree with LALSuite to 16 significant digits\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#Hard-code other inputs so we know they agree exactly with LALSuite\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#LALSuite command used: ./lalsimulation/src/lalsim-inspiral -a SEOBNRv3 -M 23 -m 10 -f 20 -X 0.01 -Y 0.02 -Z -0.03 -x 0.04 -y -0.05 -z 0.06\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'SEOBNR_Playground_Pycodes.Hreal_on_bottom'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import SEOBNR_Playground_Pycodes.Hreal_on_bottom as Ham\n",
     "#All inputs agree with LALSuite\n",
