GiRaFFE_NRPy-PPM: Finished the unit test. Created the module and added self-validation checks.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "**Validation Notes:** This code produces the expected magnetic fields for arbitrary vector potentials.\n",
     "\n",
-    "# This module presents the functionality of [GiRaFFE_NRPy_A2B.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_A2B.py) and builds on it by providing C code to incorporate the generated header files into `GiRaFFE`.\n",
+    "# This module presents the functionality of [GiRaFFE_NRPy_A2B.py](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_A2B.py).\n",
     "\n",
     "## Introduction: \n",
     "This writes and documents the C code that `GiRaFFE_NRPy` uses to compute the magnetic fields from the vector potential. This is a relatively straightforward calculation, but requires care to be taken in the ghost zones. \n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
