GiRaFFE_NRPy: Fixed a few old, incorrect file names.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -82,7 +82,7 @@
     "1. [Step 2](#s_i_flux): The $\\tilde{S}_i$ function\n",
     "    1. [Step 2.a](#hydro_speed): GRFFE characteristic wave speeds\n",
     "    1. [Step 2.b](#fluxes): Compute the HLLE fluxes\n",
-    "1. [Step 3](#code_validation): Code Validation against `GiRaFFE_HO.GiRaFFE_Higher_Order_v2` NRPy+ Module\n",
+    "1. [Step 3](#code_validation): Code Validation against `GiRaFFE_NRPy.Stilde_flux` NRPy+ Module\n",
     "1. [Step 4](#derive_speed): Complete Derivation of the Wave Speeds\n",
     "1. [Step 5](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
@@ -391,7 +391,7 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 3:  Code Validation against `GiRaFFE_HO.GiRaFFE_Higher_Order_v2` NRPy+ Module \\[Back to [top](#toc)\\]\n",
+    "# Step 3:  Code Validation against `GiRaFFE_NRPy.Stilde_flux` NRPy+ Module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "\n",
@@ -539,7 +539,7 @@
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-GiRaFFE_HO_Ccode_library-Stilde-flux.pdf](Tutorial-GiRaFFE_HO_Ccode_library-Stilde-flux.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+    "[Tutorial-GiRaFFE_NRPy-Stilde-flux.pdf](Tutorial-GiRaFFE_NRPy-Stilde-flux.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
