--- a/in_progress/Tutorial-GiRaFFE_NRPy-Induction_Equation.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Induction_Equation.ipynb
@@ -67,7 +67,7 @@
     "1. [Step 2](#e_i_flux): The $\\tilde{S}_i$ function\n",
     "    1. [Step 2.a](#hydro_speed): GRFFE characteristic wave speeds\n",
     "    1. [Step 2.b](#fluxes): Compute the HLLE fluxes\n",
-    "1. [Step 3](#code_validation): Code Validation against `GiRaFFE_HO.GiRaFFE_Higher_Order_v2` NRPy+ Module\n",
+    "1. [Step 3](#code_validation): Code Validation against `GiRaFFE_NRPy.Induction_Equation` NRPy+ Module\n",
     "1. [Step 4](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
    ]
   },
@@ -314,7 +314,7 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step 3:  Code Validation against `GiRaFFE_HO.GiRaFFE_Higher_Order_v2` NRPy+ Module \\[Back to [top](#toc)\\]\n",
+    "# Step 3:  Code Validation against `GiRaFFE_NRPy.Induction_Equation` NRPy+ Module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "\n",
@@ -410,7 +410,7 @@
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-GiRaFFE_HO_Ccode_library-Stilde-flux.pdf](Tutorial-GiRaFFE_HO_Ccode_library-Stilde-flux.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+    "[Tutorial-GiRaFFE_NRPy-Induction_Equation.pdf](Tutorial-GiRaFFE_NRPy-Induction_Equation.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
