GiRaFFE_NRPy: Unified some notation in the tutorials.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Induction_Equation.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Induction_Equation.ipynb
@@ -252,7 +252,7 @@
    "source": [
     "Now, we write a standard HLLE solver based on eq. 3.15 in [the HLLE paper](https://epubs.siam.org/doi/pdf/10.1137/1025002),\n",
     "$$\n",
-    "F^{\\rm HLL} = \\frac{c_{\\rm min} F_{\\rm R} + c_{\\rm max} F_{\\rm L} - c_{\\rm min} c_{\\rm max} ({\\rm U_{\\rm R}}-{\\rm U_{\\rm L}})}{c_{\\rm min} + c_{\\rm max}}\n",
+    "F^{\\rm HLL} = \\frac{c_{\\rm min} F_{\\rm R} + c_{\\rm max} F_{\\rm L} - c_{\\rm min} c_{\\rm max} (U_{\\rm R}-U_{\\rm L})}{c_{\\rm min} + c_{\\rm max}}\n",
     "$$"
    ]
   },
@@ -285,9 +285,7 @@
     "def calculate_E_i_flux(inputs_provided=True,alpha_face=None,gamma_faceDD=None,beta_faceU=None,\\\n",
     "                       Valenciav_rU=None,B_rU=None,Valenciav_lU=None,B_lU=None):\n",
     "    global E_fluxD\n",
-    "    # We will need to add to this rhs formula in several functions. To avoid overwriting previously written\n",
-    "    # data, we use declarerank1() instead of zerorank1(). \n",
-    "    E_fluxD = ixp.declarerank1(\"E_fluxD\",DIM=3)\n",
+    "    E_fluxD = ixp.zerorank1()\n",
     "    for flux_dirn in range(3):\n",
     "        find_cmax_cmin(flux_dirn,gamma_faceDD,beta_faceU,alpha_face)\n",
     "        calculate_flux_and_state_for_Induction(flux_dirn, gamma_faceDD,beta_faceU,alpha_face,\\\n",
