GiRaFFE_NRPy-FCVAL: Fixed a few bugs and wrote most of the unit test.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-FCVAL.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-FCVAL.ipynb
@@ -171,7 +171,7 @@
     "                                 BETAU0GF,\n",
     "                                 BETAU1GF,\n",
     "                                 BETAU2GF,\n",
-    "                                 ALPHAGF}\n",
+    "                                 ALPHAGF};\n",
     "\n",
     "const int metric_gfs_face_list[10] = {GAMMA_FACEDD00GF,\n",
     "                                      GAMMA_FACEDD01GF,\n",
@@ -182,7 +182,7 @@
     "                                      BETA_FACEU0GF,\n",
     "                                      BETA_FACEU1GF,\n",
     "                                      BETA_FACEU2GF,\n",
-    "                                      ALPHA_FACEGF}\n",
+    "                                      ALPHA_FACEGF};\n",
     "\n",
     "const int num_metric_gfs = 10;"
    ]
@@ -231,10 +231,10 @@
     "        for (int i2 = NGHOSTS;i2 < Nxx2+NGHOSTS+1;i2++) {\n",
     "            for (int i1 = NGHOSTS;i1 < Nxx2+NGHOSTS+1;i1++) {\n",
     "                for (int i0 = NGHOSTS;i0 < Nxx2+NGHOSTS+1;i0++) {\n",
-    "                    REAL Qm2 = auxevol_gfs[IDX4S(in_gf,i0-2*kronecker_delta[0,flux_dirn],i1-2*kronecker_delta[1,flux_dirn],i2-2*kronecker_delta[2,flux_dirn])];\n",
-    "                    REAL Qm1 = auxevol_gfs[IDX4S(in_gf,i0-kronecker_delta[0,flux_dirn],i1-kronecker_delta[1,flux_dirn],i2-kronecker_delta[2,flux_dirn])];\n",
+    "                    REAL Qm2 = auxevol_gfs[IDX4S(in_gf,i0-2*kronecker_delta[0][flux_dirn],i1-2*kronecker_delta[1][flux_dirn],i2-2*kronecker_delta[2][flux_dirn])];\n",
+    "                    REAL Qm1 = auxevol_gfs[IDX4S(in_gf,i0-kronecker_delta[0][flux_dirn],i1-kronecker_delta[1][flux_dirn],i2-kronecker_delta[2][flux_dirn])];\n",
     "                    REAL Qp0 = auxevol_gfs[IDX4S(in_gf,i0,i1,i2)];\n",
-    "                    REAL Qp1 = auxevol_gfs[IDX4S(in_gf,i0+kronecker_delta[0,flux_dirn],i1+kronecker_delta[1,flux_dirn],i2+kronecker_delta[2,flux_dirn])];\n",
+    "                    REAL Qp1 = auxevol_gfs[IDX4S(in_gf,i0+kronecker_delta[0][flux_dirn],i1+kronecker_delta[1][flux_dirn],i2+kronecker_delta[2][flux_dirn])];\n",
     "                    auxevol_gfs[IDX4S(out_gf,i0,i1,i2)] = COMPUTE_FCVAL(Qm2,Qm1,Qp0,Qp1);\n",
     "                }\n",
     "            }\n",
